--- a/book/slides/slides_version_control.qmd
+++ b/book/slides/slides_version_control.qmd
@@ -97,7 +97,7 @@ We will start easy!
 
 Go to:
 
-**https://tinyurl.com/uu-recipes**
+**[tinyurl.com/uu-recipes](https://github.com/dianaiusan/recipe-book)**
 
 :::
 
