--- a/book/slides/slides_project-setup.qmd
+++ b/book/slides/slides_project-setup.qmd
@@ -23,7 +23,7 @@ format:
 :::
 
 ::: footer
-(Artwork by Scriberia for [The Turing Way](https://the-turing-way.netlify.app/welcome.html), CC-BY)
+(Artwork by Scriberia for [The Turing Way](https://book.the-turing-way.org), CC-BY)
 :::
 
 ## Getting started
